# nonet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/: export_onnx.py  push_to_hf.py  render_gif.py
src/nonet/: dataset.py  hub.py  model.py  pipeline.py  schedueler.py  sudokuer.py  tokenizer.py  trainer.py  webapp.py
src/nonet/tests/: test_sudokuer.py
web/: .gitignore  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: solver.ts
web/public/: puzzles.json
