[project]
name = "nonet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thibaut CHAUFFIER", email = "tchauffi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[project.scripts]
nonet = "nonet:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
